[project]
name = "offline-deployment-diagnostics"
version = "0.1.0"
description = "A single binary CLI + iOS/Android probe app that profiles a device's actual on device inference envelope (memory, sustai"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
offline-deployment-diagnostics = "offline_deployment_diagnostics.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
